<resources>
    <string name="app_name">跑山吧</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">取消</string>
    <string name="setting">设置</string>
    <string name="notifyTitle">请求权限</string>
    <string name="notifyMsg">使用该功能需要获取您的位置</string>

    <string name="about_us">关于我们</string>
    <string name="about_our_announcement">“跑山吧”是一款为广大摩托车爱好者提供的高质量社交平台。诸位爱好者可以在平台上自发组队去骑行，在小队里讨论骑行的乐趣，分享自己的动态。\n\n
跑山吧，让爱好摩托车的你，找到更多志同道合的朋友。</string>
    <string name="customer_service_tips">产品交流及反馈可直接联系客服人员，我们将第一时间接收您宝贵的意见～</string>
    <string name="customer_service">打开客服会话</string>
    <string name="feedback_type">反馈类型</string>
    <string name="issue_questions">发布问题</string>
    <string name="account_related">账号相关</string>
    <string name="product_bug">产品BUG</string>
    <string name="complaint">投诉</string>
    <string name="optimization_suggestions">优化意见</string>
    <string name="other">其他</string>
    <string name="feedback_content">反馈内容</string>
    <string name="enter_text">输入正文</string>
    <string name="contact_information">联系方式</string>
    <string name="contact_tips">填写手机号/邮箱，方便我们联系您</string>
    <string name="add_screenshot">添加截图</string>
    <string name="home_page">首页</string>
    <string name="release">发布</string>
    <string name="news">消息</string>
    <string name="my">我的</string>
    <string name="head_portrait">头像</string>
    <string name="nickname">昵称</string>
    <string name="test_nickname">孙娜恩</string>
    <string name="birthday">生日</string>
    <string name="gender">性别</string>
    <string name="female">女</string>
    <string name="region">地区</string>
    <string name="autograph">签名</string>
    <string name="signature_tips">填写个性签名</string>
    <string name="test_signature">林深时见鹿，海蓝时见鲸，梦醒时想你。</string>
    <string name="test_motorcycle">豪爵铃木 2019款 GSX 250R-A ABS版</string>
    <string name="follow">关注</string>
    <string name="chat">聊天</string>
    <string name="fans">粉丝</string>
    <string name="released_plans">发布的计划</string>
    <string name="receive_message_notification">是否接收消息通知</string>
    <string name="certified_vehicle_display">是否展示计划</string>
    <string name="travel_plan_details">旅行计划详情</string>
    <string name="expected_number">希望人数</string>
    <string name="people">人</string>
    <string name="signed_up">已报名</string>
    <string name="per_capita_budget">人均预算</string>
    <string name="element">元</string>
    <string name="cost_method">费用方式</string>
    <string name="place_origin">始发地</string>
    <string name="destination">目的地</string>
    <string name="starting_ending_time">起止时间</string>
    <string name="comments">评论(0)</string>
    <string name="enter_comments">输入评论内容</string>
    <string name="fill_in_the_expected_number">填写希望人数</string>
    <string name="search">搜索</string>
    <string name="telephone_number">填写电话(选填)</string>
    <string name="notes">备注说明(选填)</string>
    <string name="sign_up">报名</string>
    <string name="official_reminder">官方提醒</string>
    <string name="reminder_content">为保障您的生命财产安全，请务必在跑山吧微信小程序聊天系统内沟通行程，并通过官方入口报名。请不要贪图便宜和陌生人的利益诱惑，私下通过微信等第三方平台私聊，以免上当受骗，造成其他损失。
在平台使用过程中，如收到彩票、赌博、酒托、饭托等骚扰信息，请马上举报，系统将做永久封号处理。</string>
    <string name="license_plate_number">车牌号</string>
    <string name="fill_in_the_licenser">填写车牌号</string>
    <string name="vehicle_model">车辆型号</string>
    <string name="fill_the_vehicle">填写车辆型号</string>
    <string name="upload_vehicle_license">上传行车证</string>
    <string name="vehicle_license_tips">*行车证仅供审核，不对外展示*</string>
    <string name="shoot_and_upload">拍摄上传</string>
    <string name="upload_vehicle_photos">上传车辆照片</string>
    <string name="submit_for_certification">提交认证</string>
    <string name="administration">管理</string>
    <string name="team">小队</string>
    <string name="erxu_line">二许线</string>
    <string name="route_tips">路边有一家上海风味小笼包店，店里的蟹粉小笼包和鸭血粉丝汤味道相当正宗，物美价廉</string>
    <string name="swordsman_dong_chao">天剑骑士董超</string>
    <string name="name_autograph">趁这几天天气好，我想抓住秋天的小尾巴。有没有志同道合的小伙伴一起去晋阳湖公园溜一圈儿？</string>
    <string name="occupancy_time">10-17 18:01 · </string>
    <string name="reply">回复</string>
    <string name="delete_comments">删除评论</string>
    <string name="write_review">写评论</string>
    <string name="comment_tips">有爱评论，说点儿好听的～</string>
    <string name="please_wait">请稍后...</string>
    <string name="search_history">搜索历史</string>
    <string name="hot_destinations">热门目的地</string>
    <string name="taiyuan">太原</string>
    <string name="enter_the_title">输入标题</string>
    <string name="details">详情</string>
    <string name="trip">行程</string>
    <string name="label">标签</string>
    <string name="privacy">隐私</string>
    <string name="refreshing">正在刷新</string>
    <string name="personal_home_page">我的个人主页</string>
    <string name="collection">收藏</string>
    <string name="travel_plan">旅行计划</string>
    <string name="vehicle_certification">车辆认证</string>
    <string name="not_certified">未认证</string>
    <string name="feedback">意见反馈</string>
    <string name="privacy_settings">隐私设置</string>
    <string name="place_name">晋阳湖公园约起！</string>
    <string name="heituo_village">黑坨村</string>
    <string name="distance">距离 2.1km</string>
    <string name="by_way_of">途径地</string>
    <string name="route_place_name">二许线、南中环街、南中环辅路、新晋祠路</string>
    <string name="start_end">10-18 09:00 至 10-18 18:30</string>
    <string name="moyou">摩友2234</string>
    <string name="thank_you">谢谢朋友</string>
    <string name="system_notification">系统通知</string>
    <string name="old_people_go_with">旧人随风 关注了你</string>
    <string name="no_data_available">暂无数据</string>
    <string name="loading">正在加载中</string>
    <string name="reject_information">拒绝信息</string>
    <string name="determine">确定</string>
    <string name="telephone">电话：</string>
    <string name="phone_number">13754877428</string>
    <string name="prompt_examples">这位摩友你好呀！我家就住晋阳湖旁边，可以主动报名担当向导吗？</string>
    <string name="adopt">通过</string>
    <string name="refuse">拒绝</string>
    <string name="replies">13条回复</string>
    <string name="there_are_no_search_results">当前暂无任何搜索结果</string>
    <string name="keyword_and_search_again">尝试换个关键词再搜索吧</string>
    <string name="title">标题</string>
    <string name="mutual_attention">互相关注</string>
    <string name="authentication">认证</string>
    <string name="editing_materials">编辑资料</string>
    <string name="male">男</string>
    <string name="secrecy">保密</string>
    <string name="preservation">保存</string>
    <string name="enter_a_nickname">输入昵称</string>
    <string name="change_nickname">修改昵称</string>
    <string name="modify_signature">修改签名</string>
    <string name="all_comments">全部评论</string>
    <string name="click_strong_sofa_for_no_comment">暂无评论，点击抢沙发</string>

    <string name="delete_comments_title">确定删除此评论?</string>
    <string name="confirm">确认</string>

    <string name="basic_information">基本资料</string>
    <string name="gender_two">性别 ：</string>
    <string name="birthday_two">生日： </string>
    <string name="registration">注册： </string>
    <string name="district">地区： </string>
    <string name="active">活跃：  </string>
    <string name="certification_ta">TA的认证</string>
    <string name="the_city_he_visited">TA去过的城市</string>
    <string name="tas_footprint">TA的足迹</string>
    <string name="display_information">是否展示资料</string>

</resources>