<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="@dimen/dp_18"
    android:paddingLeft="@dimen/dp_18"
    android:layout_marginTop="@dimen/dp_12"
    android:id="@+id/plan_item_search"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/plan_avatarUrl"
            android:layout_width="@dimen/dp_36"
            android:layout_height="@dimen/dp_36"
            android:background="@drawable/avatar_icon" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:orientation="vertical">

            <TextView
                android:id="@+id/plan_nickName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/swordsman_dong_chao"
                android:textColor="@color/A212A3D"
                android:textSize="@dimen/sp_15"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/plan_motorcycle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/renzheng_icon"
                android:drawablePadding="@dimen/dp_6"
                android:text="@string/test_motorcycle"
                android:textColor="@color/A686E7A"
                android:textSize="@dimen/sp_8" />

        </LinearLayout>

        <TextView
            android:id="@+id/plan_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/occupancy_time"
            android:textColor="@color/A686E7A"
            android:textSize="@dimen/sp_12" />

    </LinearLayout>

    <TextView
        android:id="@+id/plan_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_name"
        android:textColor="@color/A212A3D"
        android:layout_marginTop="@dimen/dp_10"
        android:textSize="@dimen/sp_15" />

    <TextView
        android:id="@+id/plan_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/name_autograph"
        android:textColor="@color/FF686e7a"
        android:textSize="@dimen/sp_12"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_12"
        android:background="@color/AF4F4F4"/>

</LinearLayout>
