<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp_18"
    android:paddingTop="@dimen/dp_17">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basic_information"
        android:textColor="@color/A212A3D"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_19"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_two"
                android:textColor="@color/A686E7A"
                android:textSize="@dimen/sp_15" />


            <TextView
                android:id="@+id/tv_detailed_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="女"
                android:textColor="@color/A212A3D"
                android:textSize="@dimen/sp_15" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday_two"
                android:textColor="@color/A686E7A"
                android:textSize="@dimen/sp_15" />


            <TextView
                android:id="@+id/tv_detailed_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1995-07-07"
                android:textColor="@color/A212A3D"
                android:textSize="@dimen/sp_15" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_19"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:textColor="@color/A686E7A"
                android:textSize="@dimen/sp_15" />


            <TextView
                android:id="@+id/tv_detailed_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2018-08-21"
                android:textColor="@color/A212A3D"
                android:textSize="@dimen/sp_15" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/district"
                android:textColor="@color/A686E7A"
                android:textSize="@dimen/sp_15" />


            <TextView
                android:id="@+id/tv_detailed_region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="山西·太原"
                android:textColor="@color/A212A3D"
                android:textSize="@dimen/sp_15" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_19"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active"
                android:textColor="@color/A686E7A"
                android:textSize="@dimen/sp_15" />


            <TextView
                android:id="@+id/tv_detailed_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5分钟前 1678.8km"
                android:textColor="@color/A212A3D"
                android:textSize="@dimen/sp_15" />

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:text="@string/certification_ta"
        android:textColor="@color/A212A3D"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold" />

    <!--    renzheng_not-->
    <!--    renzheng_already-->
    <ImageView
        android:id="@+id/tv_detailed_image"
        android:layout_width="@dimen/dp_57"
        android:layout_height="@dimen/dp_57"
        android:layout_marginTop="@dimen/dp_15"
        android:src="@drawable/renzheng_already" />

    <TextView
        android:layout_width="@dimen/dp_57"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:gravity="center"
        android:text="@string/vehicle_certification"
        android:textColor="@color/A686E7A"
        android:textSize="@dimen/sp_12" />

    <TextView
        android:id="@+id/tv_city_he_visited"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:text="@string/the_city_he_visited"
        android:textColor="@color/A212A3D"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold" />

    <com.miaofen.xiaoying.view.FlowViewGroup
        android:id="@+id/flowlayout_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"/>


    <TextView
        android:id="@+id/tv_tas_footprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:text="@string/tas_footprint"
        android:textColor="@color/A212A3D"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold" />

    <com.miaofen.xiaoying.view.FlowViewGroup
        android:id="@+id/flowlayout_footprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_15"/>


</LinearLayout>
