<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/colleation_avatarUrl"
                android:layout_width="@dimen/dp_36"
                android:layout_height="@dimen/dp_36"
                android:src="@drawable/avatar_icon" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/collection_nickName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swordsman_dong_chao"
                android:textColor="@color/A212A3D"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/collection_motorcycle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_3"
                android:drawableLeft="@drawable/renzheng_icon"
                android:drawablePadding="@dimen/dp_5"
                android:text="@string/test_motorcycle"
                android:textColor="@color/A212A3D"
                android:textSize="@dimen/sp_10" />

        </LinearLayout>

        <TextView
            android:id="@+id/collection_createTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/occupancy_time" />

    </LinearLayout>

    <TextView
        android:id="@+id/collection_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/place_name"
        android:textColor="@color/A212A3D"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:maxLines="1"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/collection_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:maxLines="2"
        android:text="@string/name_autograph"
        android:textSize="@dimen/sp_12" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/AF4F4F4" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10">

        <include layout="@layout/path_display_layout" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/AF4F4F4"/>
    
</LinearLayout>
