<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp_10"
    android:paddingTop="@dimen/dp_10"
    android:paddingRight="@dimen/dp_10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_headPortrait"
                android:layout_width="@dimen/dp_45"
                android:layout_height="@dimen/dp_45"
                android:src="@drawable/avatar_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp_10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_refuse_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/test_nickname"
                        android:textColor="@color/A212A3D"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:id="@+id/tv_refuse_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/occupancy_time"
                        android:textColor="@color/A686E7A"
                        android:textSize="@dimen/sp_12" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_telephone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_5"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/telephone"
                        android:textColor="@color/A686E7A"
                        android:textSize="@dimen/sp_13" />

                    <TextView
                        android:id="@+id/tv_telephone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number"
                        android:textColor="@color/A686E7A"
                        android:textSize="@dimen/sp_13" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_autograph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:maxLines="2"
                    android:text="@string/prompt_examples"
                    android:textColor="@color/A959CA7"
                    android:textSize="@dimen/sp_12" />

                <LinearLayout
                    android:id="@+id/linear_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_adopt"
                        android:layout_width="@dimen/dp_50"
                        android:layout_height="wrap_content"
                        android:background="@drawable/blue_back_circular"
                        android:gravity="center"
                        android:paddingTop="@dimen/dp_5"
                        android:paddingBottom="@dimen/dp_5"
                        android:text="@string/adopt"
                        android:textColor="@color/white"
                        android:textSize="@dimen/sp_12" />

                    <TextView
                        android:id="@+id/tv_refuse"
                        android:layout_width="@dimen/dp_50"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:background="@drawable/search_background"
                        android:gravity="center"
                        android:paddingTop="@dimen/dp_5"
                        android:paddingBottom="@dimen/dp_5"
                        android:text="@string/refuse"
                        android:textColor="@color/A212A3D"
                        android:textSize="@dimen/sp_12" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/image_rejected"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:src="@drawable/yijujue_icon"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/AF4F4F4" />

</LinearLayout>
