<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/warning_tips_back"
    android:orientation="vertical">

    <TextView
        android:id="@+id/delete_comments_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="@dimen/dp_15"
        android:paddingBottom="@dimen/dp_15"
        android:paddingLeft="@dimen/dp_60"
        android:paddingRight="@dimen/dp_60"
        android:text="@string/delete_comments_title"
        android:textColor="@color/A212A3D"
        android:textSize="@dimen/sp_17"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/D9D9D9" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_warning_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/A2A82FA"
            android:text="@string/cancel" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="match_parent"
            android:background="@color/D9D9D9" />

        <TextView
            android:id="@+id/tv_warning_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_10"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/A2A82FA"
            android:text="@string/confirm" />

    </LinearLayout>


</LinearLayout>
